[Mac] Fix for Extension Icon Chopped Entries

The button actions container logic was recently refactored so that
the padding is now baked inside the extension icon view bounds:
https://chromium-review.googlesource.com/c/chromium/src/+/961722

This caused the extension icons to be chopped because it conflicts
with the existing code that sets the vertical padding and height in
the browser action container. This causes icon to have an incorrect
y offset.

This CL fixes the issue by removing the browser action container's
padding logic, since that is now done by the extension icon view.

Bug: 825157
Change-Id: I43a4ca55fba1af0aba9ead7279a74819ba04f0d9
Reviewed-on: https://chromium-review.googlesource.com/1037764
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555428}
Former-commit-id: 49783590381be882d3097a0f13f00d3f67858c4d